move first splash H1 down slightly, fix misaligned button in midsplash

--- a/civictechprojects/static/css/partials/_LandingController.scss
+++ b/civictechprojects/static/css/partials/_LandingController.scss
@@ -66,7 +66,7 @@
   white-space: pre-wrap;
 }
 /* midsplash isn't respecting margin rules because ??? */
-.LandingController-midsplash p, .LandingController-midsplash-btn {
+.LandingController-midsplash p, .LandingController-midsplash a {
   margin-left: auto;
   margin-right: auto;
 }
